# aw_connector_tester

./: .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml  run_tests.sh  test_config.example.yml
src/aw_puller_tester/: conftest.py  dto.py  test_health.py  test_object_data.py  test_object_meta.py  test_objects.py  test_parquet.py  test_ping.py  test_sql_data.py  test_sql_meta.py  tools.py
